--- a/style.css
+++ b/style.css
@@ -323,6 +323,6 @@ border-top:1px solid  #0040FF;
 	font-size: 18px;
 	font-weight: 600;
 }
-.markdown-body *{
+.markdown-body {
  display: none;
 }
